--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,7 +84,7 @@ dependencies {
     // not need: Alternatively - use the following artifact without an Android dependency
     //implementation "androidx.datastore:datastore-preferences-core:1.0.0"
 
-//coil
+    //coil
     implementation "io.coil-kt:coil:2.4.0"
 
 
@@ -92,6 +92,26 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
+
+    //Retrofit2
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    //Gson
+    implementation 'com.google.code.gson:gson:2.10.1'
+
+    //OkHttp
+    implementation platform("com.squareup.okhttp3:okhttp-bom:4.10.0")
+    // Define any required OkHttp artifacts without version
+    implementation "com.squareup.okhttp3:okhttp"
+    implementation "com.squareup.okhttp3:logging-interceptor"
+
+
+    //DynamicSizes
+    implementation 'com.github.MrNouri:DynamicSizes:1.0'
+
+
+    //Circle indicator
+    implementation 'me.relex:circleindicator:2.1.6'
 
 }
 
