--- a/settings.gradle
+++ b/settings.gradle
@@ -4,7 +4,7 @@ pluginManagement {
         mavenCentral()
         gradlePluginPortal()
         // For DynamicSizes
-        // maven { url 'https://jitpack.io' }
+        maven { url 'https://jitpack.io' }
     }
 }
 dependencyResolutionManagement {
@@ -13,7 +13,7 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         // For DynamicSizes
-        // maven { url 'https://jitpack.io' }
+        maven { url 'https://jitpack.io' }
     }
 }
 rootProject.name = "Top Movies"
